--- a/site.conf
+++ b/site.conf
@@ -2,7 +2,7 @@ server {
         listen 80 ;
         server_name boilerplate.local;
 
-        root /var/www/html;
+        root /var/www/html/public;
         index index.php;
 
         rewrite ^/api/?(.*)$ /webservice/dispatcher.php?url=$1 last;
